# ChangeLog for dev-db/phpmyadmin
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.338 2008/10/02 04:13:30 wrobel Exp $

  02 Oct 2008; wrobel@gentoo.org -phpmyadmin-2.11.9.1.ebuild:
  Removed insecure phpmyadmin-2.11.9.1 (sec issue #238592).

  01 Oct 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  phpmyadmin-2.11.9.2.ebuild:
  ppc stable, bug #238592

  30 Sep 2008; Markus Rothe <corsair@gentoo.org> phpmyadmin-2.11.9.2.ebuild:
  Stable on ppc64; bug #238592

  30 Sep 2008; Tobias Heinlein <keytoaster@gentoo.org>
  phpmyadmin-2.11.9.2.ebuild:
  amd64 stable wrt security bug #238592

  29 Sep 2008; Jeroen Roovers <jer@gentoo.org> phpmyadmin-2.11.9.2.ebuild:
  Stable for HPPA (bug #238592).

  29 Sep 2008; Raúl Porcel <armin76@gentoo.org> phpmyadmin-2.11.9.2.ebuild:
  alpha/sparc/x86 stable wrt #238592

*phpmyadmin-2.11.9.2 (29 Sep 2008)

  29 Sep 2008; wrobel@gentoo.org -phpmyadmin-2.11.8.ebuild,
  -phpmyadmin-2.11.8.1.ebuild, +phpmyadmin-2.11.9.2.ebuild:
  Added phpmyadmin-2.11.9.2 in response to sec issue #238592. Removed
  phpmyadmin-2.11.8, -2.11.8.1 as they are vulnerable to #237781.

  23 Sep 2008; Tobias Heinlein <keytoaster@gentoo.org>
  phpmyadmin-2.11.9.1.ebuild:
  amd64 stable wrt security bug #237781

  22 Sep 2008; Jeroen Roovers <jer@gentoo.org> phpmyadmin-2.11.9.1.ebuild:
  Stable for HPPA (bug #237781).

  21 Sep 2008; Brent Baude <ranger@gentoo.org> phpmyadmin-2.11.9.1.ebuild:
  Marking phpmyadmin-2.11.9.1 ppc64 for bug 237781

  21 Sep 2008; Raúl Porcel <armin76@gentoo.org> phpmyadmin-2.11.9.1.ebuild:
  alpha/sparc/x86 stable wrt #237781

  21 Sep 2008; Brent Baude <ranger@gentoo.org> phpmyadmin-2.11.9.1.ebuild:
  Marking phpmyadmin-2.11.9.1 ppc for bug 237781

*phpmyadmin-2.11.9.1 (21 Sep 2008)

  21 Sep 2008; wrobel@gentoo.org +phpmyadmin-2.11.9.1.ebuild:
  Added phpmyadmin-2.11.9.1 in response to sec issue #237781.
