@@ -5,13 +5,15 @@ AUX phpmyadmin-2.11.5-custom-cert.patch 1000 RMD160 e8ae7f29c5958e8626c91bf62600
 AUX postinstall-en-2.8.0.txt 1117 RMD160 09838ab10f2f2cc44ca6154d182ddb573905f12c SHA1 c0c08a1ca71c54a1c900221a5bfd1fd12ecbb04a SHA256 b353e94a59c71131bc617f2e2c2b8d659c67d9277c86d20545da6b26bb08d12d
 AUX reconfig-2.8 329 RMD160 993162aa564ab7d37c7f32db439518c5cab9ace5 SHA1 0557bde5e20a06f46c4a7b1733038f7dc9745965 SHA256 526f7efb31adde131ffaff0271ea12693315c2d4e8a1f96ae4af6947815d6612
 DIST phpMyAdmin-2.11.9.2-all-languages-utf-8-only.tar.bz2 2243302 RMD160 d684d9bfe2f26d583104ddaefc92455d9053ef97 SHA1 967a346c2981cc883373c2ddc9a70cf05f57b1a6 SHA256 cc0415b691faa7d264f88c0f99fd0469e7cfd7ec0420d53c339d5f93abf6b09a
+DIST phpMyAdmin-2.11.9.3-all-languages-utf-8-only.tar.bz2 2243495 RMD160 5e030f3ae0ef112f3cf9da7f4d3c51a8a8199f2f SHA1 181a7a942b345e51a41567b22388e9690b3907ef SHA256 bb272272c242caa8dc8fe806d25cf3d616b76d62368dec02c002c9572566bdde
 EBUILD phpmyadmin-2.11.9.2.ebuild 1741 RMD160 29f18cc4d88589ba2d7f1d68412a0f5a496b5e60 SHA1 bbbe8263d3d6654dac9525d982d33c0734c23d21 SHA256 3385d4ad8aa0a1cc33e51eda9c31389c47c8075a1db87e58ed5a2d8dadbaf30f
-MISC ChangeLog 45811 RMD160 6566997e7426cbbdd09628b7ede403c8fe12c881 SHA1 accdf662fd82c5080102ea7a99687512eb21ba40 SHA256 5a4e93eac12c5f13d4e54dcd9c6a1a52d286efbbbfcf05456ff37129199c8967
+EBUILD phpmyadmin-2.11.9.3.ebuild 1744 RMD160 25c56b71e21a6e65959809e9afb36d9ab36eec18 SHA1 1b53fd5a518db839bbc80d2de97b5811400e3d56 SHA256 5602e67b75b1ac8e543b31f86d4c018cd5730dd6732dbb9742bc9f54928c73b6
+MISC ChangeLog 45990 RMD160 021da6c6864ea37f6148ed2deddeb90a9071f57e SHA1 b2c677bdeb0302f17c56452d40230209903d5e4d SHA256 e2efb562235f591a6e0af88645358b5e76ef079eb2da7c2014ef689a5bbf303e
 MISC metadata.xml 182 RMD160 9b377947041edce61a201266f0c982e3b7c91d8d SHA1 a6d1f4b69883a0940325b7b4ad1de261c7b8c485 SHA256 cf12fb82ad3a864f109328701bfc9b17657184fdb51c04b4af301b3322def6c1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.9 (GNU/Linux)
 
-iD8DBQFI5EpzEEcxCpcDQ74RAtbzAJsHsPTcHCzJ0xfzy4ltozUvTVfSRgCeMZaX
-eVq0J5KZNC5emArgDXrgcpQ=
-=susJ
+iEYEARECAAYFAkkV85QACgkQEEcxCpcDQ74jcACeK6s+qgzZj4zriK4jeOaGTunh
+nOoAoIgLHmMjK5Y1kKYhnjWljr7FnoWP
+=2adr
 -----END PGP SIGNATURE-----
