@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/phpmyadmin
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.338 2008/10/02 04:13:30 wrobel Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.339 2008/11/08 20:16:10 wrobel Exp $
+
+*phpmyadmin-2.11.9.3 (08 Nov 2008)
+
+  08 Nov 2008; Gunnar Wrobel <wrobel@gentoo.org>
+  +phpmyadmin-2.11.9.3.ebuild:
+  Added phpmyadmin-2.11.9.3 in response to sec issue #244914.
 
   02 Oct 2008; wrobel@gentoo.org -phpmyadmin-2.11.9.1.ebuild:
   Removed insecure phpmyadmin-2.11.9.1 (sec issue #238592).
